CHANGES

release 73.5
 - live environment might be set explicitly or implicitly (default) RT#325903
   for the purpose of log file location
 - st::api::lims class variable for inline index end
 - deamon monitor script, daemon parent class and tracking related daemons moved to
   this project from instrument_handling
 - disable percritic policies for having VERSION defined and having Rcs Keywords
   since these are not available in git
 - extend perlcritic tests to all namespaces except Monitor and npg_tracking::Schema
 - notification of perlcritic test failute: include policy name
 - mysql client does not read configuration in default places to avoid reading wrong configuration
 - use password for the root user on a local test database
 - webapp: reanable a link to HTML based RTA reports for MiSeq

release 73.4
- build procedure for the web server
- test that resets modification time of test files is directed away from source distribution
- top-level .gitignore file to stop git reacting to back-up files and files generated in a normal build
- reference finder to return no reference if the sample is not suitable for alignment RT#313168
- calling abs_path for non-existing files breaks under ./Build test with latest CPAN modules
    reference finder refactored to ensure that abs_path is called on existing directories
- tests improvements

release 73.3
- change MiSeq samplesheet writing location to sf49

release 73.2
- get build version from git tag or version with Keith's gitver script
- inject module version into npg::view when copying it to blib

release 73.1
- rename NPG_REFERENCE_REPOSITORY type to NPG_TRACKING_REFERENCE_REPOSITORY
  to allow for the new and original npg_common modules to co-exist
- npg_tracking::data::reference::list - do not export repository root since
  this is only needed for testing

release 73.0
- ref&bait finders and runfolder modules - copies created under npg_tracking RT#306995