@@ -2,7 +2,7 @@ use strict;
 use warnings;
 use IPC::Open2;
 use Perl6::Slurp;
-use Test::More tests => 50;
+use Test::More tests => 59;
 
 my $command = 'bin/npg_daemon_control 2>&1';
  # or with handle autovivification
@@ -17,11 +17,15 @@ my @lines = slurp $chld_out;
 like (shift(@lines), qr/npg_daemon_control options:/, 'correct first line of help');
 like (shift(@lines), qr/--help/, 'help option present');
 like (shift(@lines), qr/--dry-run/, 'dry-run option present');
+pop @lines;
+like (pop @lines, qr/--host/, 'host option present');
 
 foreach my $app (qw/jenkins samplesheet staging/) {
   foreach my $action (qw/ping stop start/) {
     my $option = q{--} . $action . q{_} . $app;
-    like (shift(@lines), qr/$option/, qq{option $option present});
+    my @found = grep { /$option/ } @lines;
+    is (scalar @found, 1, 'matched one option');
+    like ($found[0], qr/$option/, qq{option $option present});
 
     my $cmd = qq{bin/npg_daemon_control --dry-run $option 2>&1};
     my($child_out, $child_in);
@@ -35,7 +39,5 @@ foreach my $app (qw/jenkins samplesheet staging/) {
     like ($out, qr/command:/, 'command label present');
   }
 }
-
-like (shift @lines, qr/--host/, 'host option present');
 
 1;
