@@ -1,5 +1,8 @@
 CHANGES
 
+ - test for npg_daemon_control fixed to cope with presence of daemon plugins
+     that are not defined in this package
+
 release 73.5
  - live environment might be set explicitly or implicitly (default) RT#325903
    for the purpose of log file location
